data/derived/comb/progs/unify/prog2352.ml.out
Characters 5-11:
  firstF 3;;
  ^^^^^^
Error: This expression has type int -> int
       but an expression was expected of type int -> 'a -> 'b
       Type int is not compatible with type 'a -> 'b 
